# pocplot

./: .gitignore  README.md  mathextra.h.in  meson.build  meson_options.txt  poc-catalog.xml  poc.h  pocaxis.c  pocaxis.h  pocbag.c  pocbag.h  pocdataset.c  pocdataset.h  pocdatasetspline.c  pocdatasetspline.h  poclegend.c  poclegend.h  pocplot.c  pocplot.h  pocplot.map  pocsample.c  pocsample.h  pocspline.c  pocspline.h  poctypes.c  poctypes.h
docs/: meson.build  poc-docs.xml  poc.types
